--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
