--- a/src/screens/landing-page/landing-page.css
+++ b/src/screens/landing-page/landing-page.css
@@ -5,6 +5,16 @@
     background-color: whitesmoke;
 }
 
+@media only screen and (max-width: 800px) {
+ .main {
+     flex-direction: column;
+     align-items: center;
+     height: fit-content;
+     padding-bottom: 30px;
+ }
+}
+
+
 .main .first {
     width: 15%;
     display: flex;
@@ -12,14 +22,49 @@
     justify-content: center;
 }
 
+@media (max-width: 800px) {
+.main .first {
+    display: flex;
+    width: 100%;
+ }
+}
+
 .main .first .socials {
     padding-left: 25%;
 }
 
+
+@media only screen and (max-width: 800px) {
+    .main .first .socials{
+        padding-left: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+ }
+}
+
 .main .first .socials .icon {
     padding-top: 30px;
+    padding-bottom: 10px;
     width: 30px;
     border-right: 1px solid orange;
+}
+
+
+@media only screen and (max-width: 800px) {
+    .main .first .socials .icon {
+        border-right: none;
+        border-bottom: 1px solid orange;
+        font-size: 30px;
+        padding-left: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 800px) {
+    .main .first .socials .icon:last-child {
+        border-bottom: none;
+    }
 }
 
 .main .second {
@@ -29,9 +74,21 @@
     justify-content: center;
 }
 
+@media (max-width: 800px) {
+    .main .second {
+        width: 80vw;
+    }
+    
+}
 .main .second .info .hey {
     color: orange;
     font-size: 25px;
+}
+
+@media (max-width: 800px) {
+    .main .second .info .hey {
+        padding-top: 20px;
+    }  
 }
 
 .main .second .info .name {
@@ -58,7 +115,18 @@
     display: flex;
     flex-direction: row;
     padding-top: 20px;
-    
+}
+
+@media (max-width: 800px) {
+    .main .second .actions {
+        flex-direction: column;
+    }
+    .main .second .actions .contact {
+        padding-right: 0px;
+        padding-top: 20px;
+        padding-left: 0px;
+        width: 80vw;
+    }
 }
 
 .main .second .actions .cv {
@@ -77,6 +145,13 @@
     font-weight: bold;
 }
 
+@media (max-width: 800px) {
+    .main .second .actions .cv button {
+        width: 80vw;
+        padding-left: 0px;
+    }
+}
+
 .main .second .actions .cv button:hover {
     background-color: white;
     color: orange;
@@ -88,6 +163,12 @@
 
 .main .second .actions .contact {
     padding-left: 20px;
+}
+
+@media(max-width: 800px) {
+    .main .second .actions .contact {
+        padding-left: 0px;
+    }
 }
 
 
@@ -104,6 +185,13 @@
     font-weight: bold;
 }
 
+@media (max-width: 800px) {
+    .main .second .actions .contact button {
+        width: 80vw;
+        padding-left: 0px;
+    }
+}
+
 .main .second .actions .contact button:hover {
     background-color: orange;
     color: white;
@@ -118,6 +206,13 @@
     justify-content: center;
     width: 40%;
 }
+
+@media only screen and (max-width: 800px) {
+    .main .third {
+        display: none;
+    }
+}
+
 
 .main .third img {
     height: 100%;
@@ -137,9 +232,19 @@
     position: absolute;
     left: 15%;
 }
-
+@media (max-width: 800px) {
+    .stats .skills {
+       display: none;
+    }
+}
 .stats .skills:last-child {
     padding-right: 40px;
+}
+
+@media (max-width: 800px){
+    .stats .skills:last-child {
+        padding-right: 0px;
+    }
 }
 
 .stats .skills:middle-child {
@@ -152,6 +257,15 @@
     align-items: center;
     justify-content: space-between;
     padding-left: 40px;
+}
+
+@media (max-width: 800px) {
+    .stats .skills {
+        flex-direction:  column;
+    }
+    .stats .skills .skill {
+        padding-left: 0px;
+    }
 }
 .stats .skills .skill .description {
     padding-left: 50px;
@@ -173,19 +287,34 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 80%;
     margin-top: 20vh;
-    height: 60vh;
+    height: fit-content;
+    padding-bottom: 30px;
+}
+
+@media (max-width: 800px) {
+    .about {
+        flex-direction: column;
+        height: fit-content;
+        margin-top: 5vh;
+    }
 }
 .about .about-me {
     display: flex;
     border-style: solid;
     width: 30%;
     height: 480px;
-    display: flex;
     justify-content: center;
     border: none;
     background-image: linear-gradient(to right top, #d4eef4, #e1f1fa, #eef5fd, #f8fafe, #ffffff);
+}
+
+@media (max-width: 800px) {
+    .about .about-me {
+        height:fit-content;
+        width: 80vw;
+    }
 }
 
 .about .about-me img {
@@ -194,9 +323,22 @@
     padding-bottom: 20px;
 }
 
+@media (max-width: 800px) {
+    .about .about-me img {
+        width:80vw;
+    }
+}
+
 .about .description {
     width: 40%;
     margin-left: 100px;
+}
+
+@media(max-width: 800px) {
+    .about .description {
+        width:80vw;
+        margin-left: 0px;
+    }
 }
 
 .about .description .title {
@@ -216,6 +358,14 @@
     margin-top: -20px;
 }
 
+@media (max-width: 800px) {
+     
+.about .description .text .desc {
+ font-size: 20px;
+}
+
+}
+
 .about .description .bio {
     display: flex;
     flex-direction: column;
@@ -229,6 +379,19 @@
     padding-top: 15px;
 }
 
+@media (max-width: 800px) {
+    .about .description .bio .name {
+        display: inline;
+        font-weight:500 
+    }
+    .about .description .bio .name .icon .icon{
+        display: none;
+    }
+    .about .description .bio .name .icon .name {
+        display: none;
+    }
+}
+
 .about .description .bio .name .icon {
     display: flex;
     justify-content: space-evenly;
@@ -239,6 +402,7 @@
 .about .description .interests {
     margin-top: 20px;
 }
+
 
 .about .description .interests .heading {
     font-size: 20px;
@@ -252,9 +416,22 @@
     font-weight: 300;
 }
 
+@media (max-width: 800px) {
+    .about .description .interests .list {
+        flex-direction: column;  
+        padding-bottom: 40px; 
+    }
+}
+
 .about .description .interests .list .icon {
     display: flex;
     justify-content: space-between;
+}
+
+@media (max-width: 800px) {
+    .about .description .interests .list .icon {
+        justify-content: flex-start;
+        }
 }
 
 .about .description .interests .list .icon .text {
@@ -294,6 +471,13 @@
     margin-right: auto;
 }
 
+@media (max-width: 800px) {
+    .skillset .visualization {
+        flex-direction: column;
+        padding-bottom: 40px;
+    }
+}
+
 
 .skillset .visualization .right {
     display: flex;
@@ -308,6 +492,14 @@
 
 .skillset .visualization .right .language {
     width: 50%;
+}
+
+@media (max-width: 800px) {
+    .skillset .visualization .right .language .progress-bar{
+        width: 80vw;
+
+        border: 1px solid black;
+    }
 }
 
 .skillset .visualization .right .language .text {
@@ -350,10 +542,23 @@
     grid-gap: 70px;
 }
 
+@media (max-width: 800px) {
+    .previous-works .grid {
+        grid-template-columns: auto;
+    };
+}
+
 .previous-works .grid .item {
     width: 650px;
     -webkit-box-shadow: 1px 1px 11px 2px rgba(0,0,0,0.27); 
     box-shadow: 1px 1px 11px 2px rgba(0,0,0,0.27);
+}
+
+
+@media (max-width: 800px){
+    .previous-works .grid .item {
+        width: 80vw;
+    }
 }
 
 .previous-works .grid .item:hover {
